--- a/assets/index.css
+++ b/assets/index.css
@@ -66,3 +66,9 @@
     color: green;
     text-decoration:line-through;
 }
+
+#form-container {
+    display: flex;
+    justify-content: center;
+    padding: 10px;
+}
