fixing ending message and btn styling

--- a/assets/index.css
+++ b/assets/index.css
@@ -105,3 +105,12 @@ button:hover{
     display: flex;
     align-items: center;
 }
+
+.buttons {
+    display: flex;
+    justify-content: center;
+    padding: 10px;
+}
+.buttons button {
+   margin-left: 5px;
+}
