--- a/assets/index.css
+++ b/assets/index.css
@@ -6,7 +6,7 @@
 
 body{
     background-image: url('bg.jpg');
-    background-position: 0px;
+    background-size: cover;
     cursor: default;
 }
 
